--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,6 +15,9 @@ body{
   &.darker-v1{
     background-color: #FFF2D1;
   }
+  &.darker-v3{
+    background-color: #fec949;
+  }
 }
 
 .grandstander-font {
